Add some questions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,41 @@
 <resources>
     <string name="app_name">ThirdLessonAndroidApp</string>
+
+    <!--    pytanie 1 -->
     <string name="Question">Jaki szczyt jest widoczny na zdjeciu?</string>
     <string name="everest">Everest</string>
     <string name="tatry">Tatry</string>
     <string name="wielka_racza">Wielka Racza</string>
+
+    <!--    pytanie 2 -->
+    <string name="Question2">Co to jest?</string>
+    <string name="git">Git</string>
+    <string name="github">Github</string>
+    <string name="gitlab">GitLab</string>
+
+    <!--    pytanie 3 -->
+    <string name="Question3">Jaki to jezyk programowania?</string>
+    <string name="python">Python</string>
+    <string name="js">JS</string>
+    <string name="rust">Rust</string>
+
+    <!--    pytanie 4 -->
+    <string name="Question4">Jaki to wzorzec architektoniczny?</string>
+    <string name="warstwowa">Architektura warstwowa</string>
+    <string name="mikroserwisy">Mikroserwisy</string>
+    <string name="mvc">Model View Controller</string>
+
+    <!--    pytanie 5 -->
+    <string name="Question5">Jaki to framowork?</string>
+    <string name="react">React</string>
+    <string name="angular">Angular</string>
+    <string name="vue">Vue</string>
+
     <string name="check_answer">Sprawdz odpowiedz</string>
     <string name="hint">podpowiedz</string>
     <string name="image_description">Gora</string>
     <string name="good_answer">Dobra odpowiedz</string>
     <string name="bad_answer">Zla odpowiedz</string>
+    <string name="hint_text">To gora w polsce. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent efficitur diam mauris, quis sollicitudin justo egestas ac. Donec ullamcorper dolor nulla, id sodales felis blandit eu. Pellentesque porta eros ut nulla venenatis dapibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Praesent commodo lacinia purus laoreet consectetur. Sed id purus at dolor fringilla lacinia non et metus. Vestibulum volutpat, quam sit amet molestie varius, ligula elit dapibus risus, sit amet faucibus arcu sapien in turpis. Pellentesque gravida eu augue vel lacinia. Proin feugiat blandit tincidunt. In ut purus orci. Quisque non ultrices ex, ac semper est. Nunc mattis quis felis sit amet consequat. Ut imperdiet nulla vitae sapien vulputate accumsan at viverra nulla. Cras metus ex, rhoncus at fringilla ut, sollicitudin in lorem. Vestibulum at aliquet ligula. Nulla tempor consequat justo, in euismod odio blandit eget. Suspendisse laoreet sollicitudin dolor, nec suscipit ante hendrerit cursus. Phasellus varius vel ipsum eu dapibus. Vestibulum maximus nec felis at congue. Suspendisse egestas tellus vitae sapien accumsan, at imperdiet turpis placerat. Maecenas dictum maximus lobortis. Curabitur purus enim, imperdiet ut elementum id, ornare nec orci. Sed a sem sit amet orci consectetur pulvinar sed in est. Donec feugiat gravida neque, eget elementum libero mattis in. Phasellus sodales sapien ut volutpat consectetur. Pellentesque vel nisl vel tellus placerat ullamcorper. Vestibulum sagittis elit augue, vel accumsan mauris vulputate eget. Morbi in gravida nisl. Aliquam erat volutpat. Nullam eget tortor ut ligula hendrerit rutrum. Maecenas vulputate hendrerit pharetra. Praesent dapibus ac nibh nec lobortis. Sed mollis, nibh eu malesuada ullamcorper, velit sem mattis est, nec molestie enim mauris vitae mi. Sed ultrices ante eu vulputate sollicitudin. Nunc et neque eu orci vulputate eleifend. Curabitur volutpat laoreet dolor. Phasellus imperdiet mauris sed leo volutpat pretium. Duis at purus condimentum, maximus lorem nec, ultrices sem. Mauris quis diam tortor. Morbi laoreet ultricies lectus ornare imperdiet. Nam pharetra consectetur ipsum vitae dapibus. Nam diam sapien, condimentum quis ultrices at, ultricies lobortis purus. Ut tempus mauris quis maximus fringilla. Proin et tristique erat. Morbi dui ante, sollicitudin eu dolor eget, malesuada tempus lacus. Curabitur pharetra vehicula ex quis aliquam. Mauris faucibus libero quis velit pretium, eget malesuada nulla accumsan. Donec porttitor nisi nec elit dictum, sit amet volutpat nibh semper. Sed velit ex, rutrum sed auctor in, ultrices non urna. Sed posuere purus consectetur libero aliquam, quis elementum tellus rutrum. Etiam elit mauris, luctus vel magna id, facilisis vulputate quam. Donec urna ipsum, fermentum et turpis in, sollicitudin rhoncus lorem. Nunc enim elit, tempus ut sollicitudin id, porttitor ac lacus. Integer ut pulvinar felis, at pharetra neque. Vestibulum eu leo vitae ipsum dictum fringilla quis quis sapien. Maecenas nec congue enim. Maecenas id risus viverra, feugiat sapien vitae, porta massa. Suspendisse potenti. Quisque consequat malesuada odio, vitae aliquam tortor volutpat vel. Mauris vehicula, metus a luctus porttitor, erat metus euismod risus, nec dignissim sem tellus et sapien.</string>
+    <string name="return_btn">Powrot</string>
 </resources>
